--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
     />
 
-    <title>React App</title>
+    <title>Expense Tracker</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
